fix: mainNav color on mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -10404,6 +10404,12 @@ a.text-dark:hover, a.text-dark:focus {
     font-size: 1.5em;
   }
 }
+
+@media (max-width: 992px) {
+  #mainNav {
+    background: #000 !important;
+  }
+}
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
